# virtual-shell

./: .gitignore  MANIFEST.in  Makefile  README.md  TODO.md  command_base.py  command_loader.py  demo.py  main.py  mcp-executor.py  my_shell.db  package-lock.json  pyproject.toml  pytest.ini  run_agent_demo.sh  run_demo.py  run_multi_agent.py  script_runner.py  server_config.json  shell_interpreter.py  telnet_server.py  test.py  test_run_examples.py  test_s3_api_versions.py  test_tigris.py  test_tigris_buckets.py  verify_tigris.py
.github/workflows/: ci.yml
chuk_virtual_shell/: __init__.py  filesystem_compat.py  main.py  mcp_server.py  pyodide_main.py  sandbox_loader.py  sandbox_manager.py  sandbox_manager_demo.py  script_runner.py  shell_interpreter.py  telnet_server.py
chuk_virtual_shell/agents/: __init__.py  agent_definition.py  agent_process.py  cleanup.py  llm_interface.py
chuk_virtual_shell/cli/: filesystem-template-cli.md  filesystem_template_cli.py  sandbox_cli.py  sandbox_manager_cli.py  snapshot_cli.py  snapshots-cli.md
chuk_virtual_shell/commands/: __init__.py  command_base.py  command_loader.py  mcp_command_loader.py
chuk_virtual_shell/config/: ai_sandbox.yaml
chuk_virtual_shell/core/: environment.py  executor.py  expansion.py  parser.py  redirection.py
chuk_virtual_shell/interpreters/: __init__.py  bash_interpreter.py  python_interpreter.py
commands/: __init__.py
commands/environment/: __init__.py  env.py  export.py
commands/filesystem/: __init__.py  cat.py  echo.py  mkdir.py  more.py  rm.py  rmdir.py  touch.py
commands/navigation/: __init__.py  cd.py  (+2 more)
config/: ai_sandbox.yaml  claude_desktop_mcp.json  default.yaml  e2b.yaml  readonly.yaml  tigris.yaml
debug/: check_shell_initializes.py  example_mcp_shell.py  example_run_mcp_commands.py  filesystem_example_usage.py  filesystem_security_example.py  filesystem_snapshots_example.py  shell_test.py
docs/: AGENTS.md  COMMAND_TAXONOMY.md  POSIX_COMPATIBILITY.md  README.md  SHELL_OPERATORS.md  control_flow.md  mcp-integration.md  security.md  session-api.md  testing.md
examples/: .shellrc  README.md  README_AGENTS.md  advanced_redirection_demo.sh  advanced_text_processing.sh  agent_advanced_demo.py  agent_clean_demo.py  agent_demo.py  agent_pipeline_demo.sh  agent_pipeline_test.py  agent_real_llm_demo.py  agent_simple_demo.py  agentic_coding_demo.py  basic_commands.sh  comprehensive_demo.sh  control_flow.sh  control_flow_demo.sh  data_processing.py  diff_patch_demo.sh  file_operations.py  file_operations.sh  hello_world.py  hello_world.sh  mcp_client_demo.py  multi_agent_collaboration.py  multiline_control_flow.sh  new_features_demo.sh  new_shell_features.sh  python_integration_demo.py  redirection_pipeline_demo.sh  session_demo.py  simple_agent_demo.py  software_team_demo.py  system_interaction.py  text_processing.sh  working_demo.sh
filesystem/: __init__.py  directory.py  file.py  fs_manager.py  node_base.py
pyodide-container/: Dockerfile  build_and_run.sh  node_pyodide_shell.js  package-lock.json  package.json
tests/: conf_test.py  dummy_filesystem.py  dummy_shell.py  test_diff_patch_commands.py  test_heredoc.py  test_interactive_heredoc.py  test_mcp_command_loader.py  test_mcp_server.py  test_sandbox_loader.py  test_script_runner.py  test_shell_interpreter.py  test_shellrc_loading.py  test_telnet_server.py  test_text_commands_comprehensive.py  x_test_control_flow_comprehensive.py
virtual_shell/: main.py  pyodide_main.py  sandbox_loader.py  script_runner.py  shell_interpreter.py  telnet_server.py
(+236 files in other folders)
