[project]
name = "chuk-virtual-shell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.31",
    "chuk-mcp>=0.1.12",
    "chuk-virtual-fs>=0.1.10",
    "pydantic>=2.11.1",
    "pyyaml>=6.0.1",
]

# Console script to start the shell
[project.scripts]
chuk-virtual-shell = "chuk_virtual_shell.main:main"
virtual-shell = "chuk_virtual_shell.main:main"
sandbox-cli = "chuk_virtual_shell.cli.sandbox_cli:main"

[project.optional-dependencies]
boto3 = [
    "chuk-virtual-shell",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "trio>=0.29.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.build.targets.wheel]
packages = ["chuk_virtual_shell"]

[tool.uv.sources]
chuk-virtual-shell = { workspace = true }
